Use vh-check to fix viewport issue on iOS Safari

--- a/src/FilingStatusSection.css
+++ b/src/FilingStatusSection.css
@@ -89,6 +89,7 @@ button {
 
 .marriage-status-section-container {
   height: 100vh;
+  height: calc(100vh - var(--vh-offset, 0px));
   
   display: grid;
   grid-gap: 20px;
