--- a/src/TaxYearSection.css
+++ b/src/TaxYearSection.css
@@ -73,6 +73,7 @@
 
 .tax-year-section-container {
   height: 100vh;
+  height: calc(100vh - var(--vh-offset, 0px));
   
   display: grid;
   grid-gap: 20px;
